k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: passenger-api
spec:
  selector:
    app.kubernetes.io/name: passenger-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8761
